--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "build": "node build.js"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "esbuild": "^0.27.0"
   },
   "peerDependencies": {
     "typescript": "^5"
